k8s-yaml-check/cartservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice-online-boutique
  namespace: online-boutique
  labels:
    app: cartservice-online-boutique
spec:
  selector:
    matchLabels:
      app: cartservice-online-boutique
  template:
    metadata:
      labels:
        app: cartservice-online-boutique
    spec:
      serviceAccountName: cartservice-online-boutique
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      imagePullSecrets:
        - name: dockerhub-key
      containers:
      - name: server
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: [-ALL]
          privileged: false
          readOnlyRootFilesystem: true
        image: kihpn1711/cartservice:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 7070
        resources:
          requests:
            cpu: 200m
            memory: 64Mi
          limits:
            cpu: 300m
            memory: 128Mi
        readinessProbe:
          initialDelaySeconds: 25 # 🚨 Tăng lên 25s cho chắc
          timeoutSeconds: 5
          grpc:
            port: 7070
        livenessProbe:
          initialDelaySeconds: 25 # 🚨 Tăng lên 25s
          timeoutSeconds: 5
          periodSeconds: 10
          grpc:
            port: 7070
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice-online-boutique
  namespace: online-boutique
  labels:
    app: cartservice-online-boutique
spec:
  type: ClusterIP
  selector:
    app: cartservice-online-boutique
  ports:
  - name: grpc
    port: 7070
    targetPort: 7070
