k8s-yaml-check/currencyservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice-online-boutique
  namespace: online-boutique
  labels:
    app: currencyservice-online-boutique
spec:
  selector:
    matchLabels:
      app: currencyservice-online-boutique
  template:
    metadata:
      labels:
        app: currencyservice-online-boutique
    spec:
      serviceAccountName: currencyservice-online-boutique
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      imagePullSecrets:
        - name: dockerhub-key
      containers:
      - name: server
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
        image: kihpn1711/currencyservice:v1
        imagePullPolicy: Always
        ports:
        - name: grpc
          containerPort: 7000
        readinessProbe:
          grpc:
            port: 7000
        livenessProbe:
          grpc:
            port: 7000
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: currencyservice-online-boutique
  namespace: online-boutique
  labels:
    app: currencyservice-online-boutique
spec:
  type: ClusterIP
  selector:
    app: currencyservice-online-boutique
  ports:
  - name: grpc
    port: 7000
    targetPort: 7000
