k8s-yaml-check/paymentservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice-online-boutique
  namespace: online-boutique
  labels:
    app: paymentservice-online-boutique
spec:
  selector:
    matchLabels:
      app: paymentservice-online-boutique
  template:
    metadata:
      labels:
        app: paymentservice-online-boutique
    spec:
      serviceAccountName: paymentservice-online-boutique
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      imagePullSecrets:
        - name: dockerhub-key
      containers:
      - name: server
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: [-ALL]
          privileged: false
          readOnlyRootFilesystem: true
        image: kihpn1711/paymentservice:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 50051
        readinessProbe:
          initialDelaySeconds: 20 # 🚨 Thêm dòng này để K8s kiên nhẫn hơn
          periodSeconds: 10
          timeoutSeconds: 5
          grpc:
            port: 50051
        livenessProbe:
          initialDelaySeconds: 20 # 🚨 Thêm dòng này
          periodSeconds: 10
          timeoutSeconds: 5
          grpc:
            port: 50051
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice-online-boutique
  namespace: online-boutique
  labels:
    app: paymentservice-online-boutique
spec:
  type: ClusterIP
  selector:
    app: paymentservice-online-boutique
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
