k8s-yaml-check/recommendationservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice-online-boutique
  namespace: online-boutique
  labels:
    app: recommendationservice-online-boutique
spec:
  selector:
    matchLabels:
      app: recommendationservice-online-boutique
  template:
    metadata:
      labels:
        app: recommendationservice-online-boutique
    spec:
      serviceAccountName: recommendationservice-online-boutique
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      imagePullSecrets:
        - name: dockerhub-key
      containers:
      - name: server
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: [-ALL]
          privileged: false
          readOnlyRootFilesystem: true
        image: kihpn1711/recommendationservice:v1 # 
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          initialDelaySeconds: 20 # 🚨 Thêm thời gian chờ khởi động
          periodSeconds: 15
          timeoutSeconds: 5
          grpc:
            port: 8080
        livenessProbe:
          initialDelaySeconds: 20 # 🚨 Thêm thời gian chờ cho chắc
          periodSeconds: 15
          timeoutSeconds: 5
          grpc:
            port: 8080
        resources:
          requests:
            cpu: 100m
            memory: 220Mi
          limits:
            cpu: 200m
            memory: 450Mi
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice-online-boutique
  namespace: online-boutique
  labels:
    app: recommendationservice-online-boutique
spec:
  type: ClusterIP
  selector:
    app: recommendationservice-online-boutique
  ports:
  - name: grpc
    port: 8080
    targetPort: 8080
