k8s-yaml-check/redis-cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cart-online-boutique
  namespace: online-boutique
spec:
  selector:
    matchLabels:
      app: redis-cart-online-boutique
  template:
    metadata:
      labels:
        app: redis-cart-online-boutique
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: redis
        image: redis:alpine
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: [-ALL]
          privileged: false
          readOnlyRootFilesystem: true
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 70m
            memory: 200Mi
          limits:
            cpu: 125m
            memory: 256Mi
        volumeMounts:
        - mountPath: /data
          name: redis-data
      volumes:
      - name: redis-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cart-online-boutique
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: redis-cart-online-boutique
  ports:
  - name: tcp-redis
    port: 6379
    targetPort: 6379 # 🚨 Đã fix từ target_port thành targetPort
