k8s-yaml-check/ingress-online-boutique.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-boutique-ingress
  namespace: online-boutique
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: online-boutique.kihpn.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-online-boutique
            port:
              number: 80
